change file structure

--- a/Notebooks/topic_modeling_data_preparation.ipynb
+++ b/Notebooks/topic_modeling_data_preparation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "      <td>N</td>\n",
        "      <td>C</td>\n",
        "      <td>25000</td>\n",
-       "      <td>102.992</td>\n",
+       "      <td>102.992000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.571479</td>\n",
        "      <td>...</td>\n",
@@ -93,39 +93,230 @@
        "      <td>10787.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>T</td>\n",
+       "      <td>WAMU3885939</td>\n",
+       "      <td>92936PAB6</td>\n",
+       "      <td>CORP</td>\n",
+       "      <td>N</td>\n",
+       "      <td>C</td>\n",
+       "      <td>214</td>\n",
+       "      <td>95.934579</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>5565.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>T</td>\n",
+       "      <td>WAMU3885939</td>\n",
+       "      <td>92936PAB6</td>\n",
+       "      <td>CORP</td>\n",
+       "      <td>N</td>\n",
+       "      <td>C</td>\n",
+       "      <td>100</td>\n",
+       "      <td>92.500000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>991</td>\n",
+       "      <td>5583.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10796.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 57 columns</p>\n",
+       "<p>3 rows × 57 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "  TRC_ST  BOND_SYM_ID   CUSIP_ID SCRTY_TYPE_CD WIS_CD CMSN_TRD_FL  \\\n",
        "0      T  TWIX3666829  982526AB1          CORP      N           C   \n",
+       "1      T  WAMU3885939  92936PAB6          CORP      N           C   \n",
+       "2      T  WAMU3885939  92936PAB6          CORP      N           C   \n",
        "\n",
-       "   ENTRD_VOL_QT  RPTD_PR YLD_SIGN_CD    YLD_PT     ...     Affiliated  \\\n",
-       "0         25000  102.992         NaN  1.571479     ...              0   \n",
+       "   ENTRD_VOL_QT     RPTD_PR YLD_SIGN_CD    YLD_PT     ...     Affiliated  \\\n",
+       "0         25000  102.992000         NaN  1.571479     ...              0   \n",
+       "1           214   95.934579         NaN       NaN     ...              0   \n",
+       "2           100   92.500000         NaN       NaN     ...              0   \n",
        "\n",
        "   Offer_d_Diff  Maturity_d_Diff  Offer_d30  Offer_d60  Offer_d90 Mature_d90  \\\n",
        "0          3292            364.0          1        1.0        1.0        NaN   \n",
+       "1          1009           5565.0          1        1.0        1.0        NaN   \n",
+       "2           991           5583.0          1        1.0        1.0        NaN   \n",
        "\n",
        "      YYYYQQ Buyer_RPT  Seller_RPT  \n",
        "0 2014-09-30   10787.0         NaN  \n",
+       "1 2014-12-31       NaN         NaN  \n",
+       "2 2014-12-31       NaN     10796.0  \n",
        "\n",
-       "[1 rows x 57 columns]"
+       "[3 rows x 57 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head(1)"
+    "data.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Report_Dealer_Index</th>\n",
+       "      <th>TRD_EXCTN_DT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>20140716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>83</td>\n",
+       "      <td>20141223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>83</td>\n",
+       "      <td>20141205</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Report_Dealer_Index  TRD_EXCTN_DT\n",
+       "0                    0      20140716\n",
+       "1                   83      20141223\n",
+       "2                   83      20141205"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#document = data.groupby(by=['Report_Dealer_Index','TRD_EXCTN_DT'])\n",
+    "document = data[['Report_Dealer_Index','TRD_EXCTN_DT']]\n",
+    "document.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BOND_SYM_ID</th>\n",
+       "      <th>CUSIP_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TWIX3666829</td>\n",
+       "      <td>982526AB1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WAMU3885939</td>\n",
+       "      <td>92936PAB6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>WAMU3885939</td>\n",
+       "      <td>92936PAB6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   BOND_SYM_ID   CUSIP_ID\n",
+       "0  TWIX3666829  982526AB1\n",
+       "1  WAMU3885939  92936PAB6\n",
+       "2  WAMU3885939  92936PAB6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token = data[['BOND_SYM_ID','CUSIP_ID']]\n",
+    "token.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -149,7 +342,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +369,7 @@
        "Name: ENTRD_VOL_QT, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +817,7 @@
        "[3896 rows x 2 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -706,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +1020,7 @@
        "[2 rows x 57 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
