--- a/Notebooks/topic_modeling_Gensim-LDA.ipynb
+++ b/Notebooks/topic_modeling_Gensim-LDA.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Todo\n",
+    "* Sensitivity 250 500 1000\n",
+    "* For the 500, take top 10% heightest weight\n",
+    "* Take that threshold for other topics\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -11,7 +21,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder \"C:\\Users\\cchen07\\AppData\\Local\\Temp\" will be used to save temporary dictionary and corpus.\n"
+      "Folder \"C:\\Users\\raymo\\AppData\\Local\\Temp\" will be used to save temporary dictionary and corpus.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-11-16 15:20:01,387 : INFO : 'pattern' package not found; tag filters are not available for English\n"
      ]
     }
    ],
@@ -1921,7 +1938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
