--- a/Notebooks/topic_modeling_gensimLDA_compute.ipynb
+++ b/Notebooks/topic_modeling_gensimLDA_compute.ipynb
@@ -113,9 +113,7 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "source": [
     "%%timeit \n",
     "# use unstack create sparse matrix\n",
@@ -193,7 +191,10 @@
     "matrix1_corpus = gensim.matutils.Dense2Corpus(matrix_1.values,documents_columns=False)\n",
     "# Run LdaMulticore in Gensim\n",
     "num_topics = 1500\n",
-    "lda = gensim.models.ldamulticore.LdaMulticore(corpus= matrix1_corpus,id2word=id2word,workers=3, num_topics=num_topics, chunksize=10000, passes=1)\n",
+    "chunksize = 10000\n",
+    "passes = 20\n",
+    "iterations = 50\n",
+    "lda = gensim.models.ldamulticore.LdaMulticore(corpus= matrix1_corpus,id2word=id2word,workers=3, num_topics=num_topics, chunksize=chunksize, passes=passes,iterations=iterations)\n",
     "\n",
     "print(\"LdaMulticore Done!!\")\n",
     "\n",
@@ -244,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
