--- a/Notebooks/topic_modeling_gensimLDA_compute.ipynb
+++ b/Notebooks/topic_modeling_gensimLDA_compute.ipynb
@@ -105,6 +105,97 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix1_corpus = gensim.matutils.Dense2Corpus(matrix_1.values,documents_columns=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_corpus(corpus,file_name):\n",
+    "    current_path = os.getcwd()\n",
+    "    current_path = Path(current_path)\n",
+    "    corpus_save_path = current_path.parent / \"./Data/Corpus/\"\n",
+    "    try:\n",
+    "        os.mkdir(corpus_save_path)\n",
+    "    except OSError:  \n",
+    "        print (\"Creation of the directory %s failed\" % corpus_save_path)\n",
+    "    else:  \n",
+    "        print (\"Successfully created the directory %s \" % corpus_save_path)\n",
+    "    file_name = corpus_save_path / \"{}.mm\".format(file_name)\n",
+    "    gensim.corpora.MmCorpus.serialize(str(file_name), corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creation of the directory C:\\Users\\raymo\\UMD\\Research\\FINRA_TRACE\\Data\\Corpus failed\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_corpus(matrix1_corpus,\"matrix_1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_corpus(file_name):\n",
+    "    print(\"loading corpus...\")\n",
+    "    current_path = os.getcwd()\n",
+    "    current_path = Path(current_path)\n",
+    "    corpus_load_path = current_path.parent / \"./Data/Corpus/\"\n",
+    "    file_name = corpus_load_path / \"{}.mm\".format(file_name)\n",
+    "    file_name = str(file_name)\n",
+    "    corpus = gensim.corpora.MmCorpus(file_name)\n",
+    "    print(\"corpus successfully loaded!!\")\n",
+    "    print(corpus)\n",
+    "    return corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = load_corpus(\"matrix_1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MmCorpus(98304 documents, 12078 features, 4072730 non-zero entries)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corpus)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
