--- a/TopicModeling/testing.ipynb
+++ b/TopicModeling/testing.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Library\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "from sklearn import preprocessing\n",
+    "import warnings\n",
+    "warnings.filterwarnings(action='ignore', category=UserWarning, module='gensim')\n",
+    "import gensim\n",
+    "from gensim.test.utils import datapath\n",
+    "# Import local files\n",
+    "import get_data\n",
+    "from manage_path import get_current_directory,create_directory"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -40,20 +61,6 @@
     }
    ],
    "source": [
-    "# Import Library\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "from sklearn import preprocessing\n",
-    "import warnings\n",
-    "warnings.filterwarnings(action='ignore', category=UserWarning, module='gensim')\n",
-    "import gensim\n",
-    "from gensim.test.utils import datapath\n",
-    "# Import local files\n",
-    "import get_data\n",
-    "from manage_path import get_current_directory,create_directory\n",
-    "\n",
     "def data_groupby():\n",
     "    data = get_data.get_data()\n",
     "    data_gb = data.groupby(by=['document','BOND_SYM_ID'])\n",
@@ -206,6 +213,60 @@
    "source": [
     "corpus = load_corpus(\"matrix_1\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_path = get_current_directory()\n",
+    "save_path = current_path.parent / (\"./LDAModel/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('C:/Users/raymo/UMD/Research/FINRA_TRACE/LDAModel')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "save_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully created the directory C:\\Users\\raymo\\UMD\\Research\\FINRA_TRACE\\LDAModel \n"
+     ]
+    }
+   ],
+   "source": [
+    "create_directory(save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
