--- a/TopicModeling/testing.ipynb
+++ b/TopicModeling/testing.ipynb
@@ -74,6 +74,23 @@
     "    print(\"computing matrix_1 done!\")\n",
     "    return matrix_1\n",
     "\n",
+    "def compute_matrix2():\n",
+    "    data_gb = data_groupby()\n",
+    "    print(\"computing matrix_2 ......\")\n",
+    "    matrix_2 = data_gb['ENTRD_VOL_QT'].sum().unstack(fill_value=0)\n",
+    "    matrix_2 = matrix_2.sort_index(axis=1)\n",
+    "    print(\"computing matrix_2 done!\")\n",
+    "    return matrix_2\n",
+    "\n",
+    "def compute_matrix3():\n",
+    "    data_gb = data_groupby()\n",
+    "    print(\"computing matrix_3 ......\")\n",
+    "    data_gb['cap'] = pd.eval(data_gb['ENTRD_VOL_QT'] * data_gb['RPTF_PR'])\n",
+    "    matrix_3 = data_gb['cap'].sum().unstack(fill_value=0)\n",
+    "    matrix_3 = matrix_3.sort_index(axis=1)\n",
+    "    print(\"computing matrix_3 done!\")\n",
+    "    return matrix_3\n",
+    "\n",
     "def compute_corpus(matrix):\n",
     "    corpus = gensim.matutils.Dense2Corpus(matrix.values,documents_columns=False)\n",
     "    return corpus\n",
