--- a/Notebooks/topic_modeling_gensimLDA_analysis.ipynb
+++ b/Notebooks/topic_modeling_gensimLDA_analysis.ipynb
@@ -4,13 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Todo\n",
-    "* Sensitivity 250 500 1000\n",
-    "* For the 500, take top 10% heightest weight\n",
-    "* Take that threshold for other topics\n",
+    "# Topic Model Analysis\n",
     "\n",
-    "https://miningthedetails.com/blog/python/lda/GensimLDA/\n",
-    "https://markroxor.github.io/gensim/static/notebooks/lda_training_tips.html"
+    "Todo: 1. industry : cusip to naics mapping"
    ]
   },
   {
@@ -26,24 +22,22 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "#import logging\n",
-    "#logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)\n",
-    "#import tempfile\n",
-    "#TEMP_FOLDER = tempfile.gettempdir()\n",
-    "#print('Folder \"{}\" will be used to save temporary dictionary and corpus.'.format(TEMP_FOLDER))\n",
-    "\n",
-    "#%matplotlib inline\n",
-    "#import matplotlib\n",
-    "#import matplotlib.pyplot as plt\n",
-    "#from IPython.display import set_matplotlib_formats\n",
-    "#set_matplotlib_formats('retina')\n",
-    "\n",
     "from sklearn import preprocessing\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(action='ignore', category=UserWarning, module='gensim')\n",
     "import gensim\n",
-    "from gensim.test.utils import datapath"
+    "from gensim.test.utils import datapath\n",
+    "\n",
+    "from compute_topic import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Document Topic Distribution\n",
+    "Below, we will get top three topics per document with minimum probability threshold"
    ]
   },
   {
@@ -52,11 +46,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
     "# The model with model_name we want to load\n",
-    "def load_model(model_name):\n",
+    "def load_model(model_name,topics):\n",
     "    current_path = os.getcwd()\n",
     "    current_path = Path(current_path)\n",
-    "    load_path = current_path.parent / \"./Data/LDAModel/{}/{}\".format(model_name,model_name)\n",
+    "    topic_name =\"_{}topics\".format(topics)\n",
+    "    file_name = model_name + topic_name\n",
+    "    load_path = current_path.parents[0] / \"./LDAModel/{}/{}\".format(file_name,file_name)\n",
     "    load_path = str(load_path)\n",
     "    lda = gensim.models.ldamulticore.LdaMulticore.load(load_path)\n",
     "    return lda"
@@ -66,197 +65,84 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading corpus...\n",
+      "corpus successfully loaded!!\n",
+      "MmCorpus(98304 documents, 12078 features, 4072730 non-zero entries)\n",
+      "loading id2word ...\n",
+      "id2word loaded!!\n"
+     ]
+    }
+   ],
    "source": [
-    "model_name = \"matrix1_100topic\"\n",
-    "matrix1_100topic = load_model(model_name)"
+    "model_name = \"matrix_1\"\n",
+    "from gensim.corpora import Dictionary\n",
+    "corpus = load_corpus(model_name)\n",
+    "id2word = load_id2word(model_name)\n",
+    "dictionary = Dictionary.from_corpus(corpus,id2word=id2word)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"matrix1_250topic\"\n",
-    "matrix1_250topic = load_model(model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"matrix1_500topic\"\n",
-    "matrix1_500topic = load_model(model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"matrix1_750topic\"\n",
-    "matrix1_750topic = load_model(model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"matrix1_1000topic\"\n",
-    "matrix1_1000topic = load_model(model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"matrix1_1500topic\"\n",
-    "matrix1_1500topic = load_model(model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(603,\n",
-       "  '0.080*\"HL4080028\" + 0.036*\"MCP3983624\" + 0.031*\"RCII.GH\" + 0.011*\"NSM4013441\" + 0.011*\"IO4117248\" + 0.011*\"WHR4099800\" + 0.011*\"NES3879264\" + 0.009*\"IGT.GI\" + 0.009*\"WLT4062096\" + 0.009*\"BTU3905482\"'),\n",
-       " (568,\n",
-       "  '0.003*\"PBR4006643\" + 0.003*\"AAPL4001809\" + 0.003*\"VZ4050437\" + 0.003*\"PBR3688575\" + 0.003*\"TWC3674494\" + 0.003*\"CDFA.GC\" + 0.002*\"JPM3999853\" + 0.002*\"CCCX3917899\" + 0.002*\"GE.HEE\" + 0.002*\"AEE.HV\"'),\n",
-       " (22,\n",
-       "  '0.021*\"NIEF4047034\" + 0.004*\"RIG.GX\" + 0.003*\"PVA.GD\" + 0.003*\"HL4080028\" + 0.003*\"PBR3688575\" + 0.003*\"AAPL4001809\" + 0.003*\"CLF.AC\" + 0.003*\"OKE.AA\" + 0.002*\"SWY.GN\" + 0.002*\"KO4066189\"'),\n",
-       " (96,\n",
-       "  '0.019*\"PPL.IC\" + 0.014*\"RRD3674729\" + 0.010*\"CLF.AB\" + 0.005*\"PPL.IR\" + 0.005*\"RAI3922486\" + 0.005*\"GEF3677223\" + 0.004*\"DISH.GZ\" + 0.003*\"PFE3690876\" + 0.003*\"CCCX3917899\" + 0.003*\"VALE3701084\"'),\n",
-       " (134,\n",
-       "  '0.063*\"HCP.JK\" + 0.041*\"JRCC.GG\" + 0.013*\"KRI.GD\" + 0.009*\"TEG4071296\" + 0.008*\"ALU3697111\" + 0.007*\"ETHN.GB\" + 0.007*\"RPIZ.AA\" + 0.007*\"ARCC4071336\" + 0.006*\"BBBY4144685\" + 0.006*\"RBS3705326\"'),\n",
-       " (406,\n",
-       "  '0.067*\"DRI.GK\" + 0.013*\"CLF.AC\" + 0.007*\"CLF.AD\" + 0.006*\"DTEGF4096883\" + 0.006*\"CLF.AA\" + 0.004*\"SWY.GN\" + 0.004*\"PBR4006643\" + 0.004*\"PPL.IR\" + 0.004*\"PBR3688575\" + 0.003*\"LUK3683511\"'),\n",
-       " (244,\n",
-       "  '0.012*\"JNY.GJ\" + 0.005*\"RCII4067942\" + 0.004*\"AVP3979750\" + 0.003*\"COP.GV\" + 0.003*\"SYMC3865873\" + 0.003*\"AAPL4001809\" + 0.003*\"SWY.GN\" + 0.003*\"PPL.IR\" + 0.003*\"PBR4006643\" + 0.002*\"AA.HO\"'),\n",
-       " (622,\n",
-       "  '0.008*\"VZ.JL\" + 0.007*\"BUD4091629\" + 0.006*\"C4062481\" + 0.005*\"BP.JH\" + 0.005*\"AAPL4001809\" + 0.005*\"BRK3853634\" + 0.005*\"CMCS.GZ\" + 0.005*\"JPM.SCH\" + 0.005*\"CSCO.GE\" + 0.005*\"HD.GM\"'),\n",
-       " (239,\n",
-       "  '0.061*\"AMZN3936284\" + 0.037*\"AGO4136090\" + 0.008*\"MCK4104773\" + 0.007*\"SWY.GN\" + 0.007*\"RIG.HE\" + 0.005*\"RIG.GX\" + 0.005*\"LINE3690892\" + 0.005*\"SD.AH\" + 0.004*\"PPL.IR\" + 0.004*\"WTI.AC\"'),\n",
-       " (678,\n",
-       "  '0.025*\"FTR3669891\" + 0.021*\"CLF.AB\" + 0.011*\"RCII.GH\" + 0.005*\"PPL.IR\" + 0.005*\"TGT4136096\" + 0.005*\"SWY.HG\" + 0.005*\"SYMC.GH\" + 0.004*\"SFY3845878\" + 0.004*\"CLF.AD\" + 0.004*\"X.GF\"'),\n",
-       " (716,\n",
-       "  '0.005*\"RDEN.GD\" + 0.004*\"PBR3688575\" + 0.004*\"RIG.HE\" + 0.004*\"RIG.GX\" + 0.004*\"SWY.HG\" + 0.004*\"SFTBF3928946\" + 0.003*\"CLF.AC\" + 0.003*\"AVP3979750\" + 0.003*\"AU4033717\" + 0.003*\"BTU.GI\"'),\n",
-       " (84,\n",
-       "  '0.035*\"WCRX.AC\" + 0.030*\"CTL3705103\" + 0.007*\"CNW3706165\" + 0.005*\"PBR3688575\" + 0.004*\"HBC.AGZ\" + 0.004*\"WU.GF\" + 0.004*\"RIG.GX\" + 0.003*\"CLF.AC\" + 0.003*\"AU3882696\" + 0.003*\"PPL.IR\"'),\n",
-       " (746,\n",
-       "  '0.100*\"AOI4075603\" + 0.036*\"AES3903624\" + 0.006*\"CCCX3917899\" + 0.005*\"CLF.AD\" + 0.005*\"PPL.IR\" + 0.004*\"WLT4062096\" + 0.004*\"IEP4082421\" + 0.004*\"FMC4070413\" + 0.003*\"BRSG3693247\" + 0.003*\"AGN.KV\"'),\n",
-       " (167,\n",
-       "  '0.052*\"NEM.GL\" + 0.011*\"UU.GC\" + 0.007*\"EAC4123496\" + 0.006*\"GNW.JO\" + 0.005*\"FST.GO\" + 0.005*\"SWY.GN\" + 0.004*\"SCHW.AD\" + 0.003*\"ANR.GC\" + 0.003*\"AMD.AA\" + 0.003*\"WFC4097730\"'),\n",
-       " (650,\n",
-       "  '0.038*\"PRA4072207\" + 0.006*\"SFTBF3928946\" + 0.005*\"PFE.GO\" + 0.003*\"PBR4006643\" + 0.003*\"AAPL4001809\" + 0.003*\"PTP.GD\" + 0.003*\"MRH3912041\" + 0.003*\"PLD.GQ\" + 0.003*\"CTL3705105\" + 0.003*\"SVM.GC\"'),\n",
-       " (77,\n",
-       "  '0.027*\"IBM4002815\" + 0.013*\"NOV3673231\" + 0.011*\"TOT4088034\" + 0.005*\"F.GSX\" + 0.004*\"NKE3998567\" + 0.004*\"WFC.JX\" + 0.003*\"GCII.GJ\" + 0.003*\"HAS.GI\" + 0.003*\"ADM.GI\" + 0.002*\"TWIX3666829\"'),\n",
-       " (225,\n",
-       "  '0.022*\"ENH.GA\" + 0.012*\"IBM4002815\" + 0.011*\"OMI.GA\" + 0.008*\"NRGY4125830\" + 0.005*\"CLF.AC\" + 0.004*\"VZ4050437\" + 0.004*\"BLKG.AB\" + 0.004*\"ANKO.GC\" + 0.004*\"T3818484\" + 0.003*\"AAL4009127\"'),\n",
-       " (688,\n",
-       "  '0.022*\"BMA.GB\" + 0.016*\"PBR4006642\" + 0.013*\"CLF.AC\" + 0.011*\"PPL.IR\" + 0.009*\"JBL.GG\" + 0.009*\"KWK.GC\" + 0.006*\"SWY.GN\" + 0.005*\"CLF.AD\" + 0.004*\"PBR4006643\" + 0.004*\"CAT.AF\"'),\n",
-       " (526,\n",
-       "  '0.005*\"PBR4006643\" + 0.005*\"BGC.GJ\" + 0.003*\"PBR3688575\" + 0.003*\"AAPL4001809\" + 0.003*\"NEM3827984\" + 0.003*\"CLF.AD\" + 0.003*\"PPL.IR\" + 0.003*\"SFTBF3928946\" + 0.002*\"SWY.GN\" + 0.002*\"AU4033717\"'),\n",
-       " (338,\n",
-       "  '0.012*\"ANR.GC\" + 0.008*\"AGN3979696\" + 0.006*\"CLF.AB\" + 0.006*\"ETFC3691819\" + 0.005*\"SWY.GN\" + 0.004*\"NEM3827984\" + 0.004*\"RIG.HE\" + 0.003*\"PHH4038003\" + 0.003*\"CA4040462\" + 0.003*\"RIG.GX\"')]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading data TRACE2014_jinming...\n",
+      "Getting data fromC:\\Users\\raymo\\UMD\\Research\\FINRA_TRACE\\Data\\Pickle\\TRACE2014_jinming...\n",
+      "Data getting success!\n",
+      "computing matrix_1 ......\n",
+      "computing matrix_1 done!\n"
+     ]
     }
    ],
    "source": [
-    "matrix1_750topic.print_topics()"
+    "# compute matrix to get for later creating data frame\n",
+    "matrix_1 = compute_matrix1()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('HL4080028', 0.07980591),\n",
-       " ('MCP3983624', 0.036443215),\n",
-       " ('RCII.GH', 0.031155517),\n",
-       " ('NSM4013441', 0.011121476),\n",
-       " ('IO4117248', 0.011079177),\n",
-       " ('WHR4099800', 0.011063738),\n",
-       " ('NES3879264', 0.010838084),\n",
-       " ('IGT.GI', 0.00911228),\n",
-       " ('WLT4062096', 0.008906558),\n",
-       " ('BTU3905482', 0.008750132)]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "matrix1_750topic.show_topic(603)"
+    "def document_topic_distribution(matrix_object,model_name,topics,minimum_probability=0.10):\n",
+    "    model = load_model(model_name,topics)\n",
+    "    # minimum_probability is our threshold\n",
+    "    document_topics = model.get_document_topics(corpus,minimum_probability=minimum_probability)\n",
+    "    # convert document_topics, which is a gesim corpus, to numpy array\n",
+    "    document_topic_distribution_numpy = gensim.matutils.corpus2dense(document_topics,num_terms=int(topics))\n",
+    "    # need to transpose it because gensim represents documents on columns token on index\n",
+    "    document_topic_distribution_numpy = np.transpose(document_topic_distribution_numpy)\n",
+    "    # combine document_topic_distribution with index from matrix and columns represents gensim topics\n",
+    "    document_topic_distribution_pandas = pd.DataFrame(data=document_topic_distribution_numpy,index=matrix_1.index,columns=np.arange(int(topics)))\n",
+    "    # Only get the top three topics per document\n",
+    "    document_topic_distribution_pandas = document_topic_distribution_pandas[document_topic_distribution_pandas.rank(axis=1,method='max',ascending=False) <= 3]\n",
+    "    # Save the dataframe to csv\n",
+    "    document_topic_distribution_pandas.to_csv('../Results/{}_{}topics.csv'.format(model_name,topics))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(7999, 0.01583518),\n",
-       " (9732, 0.012683756),\n",
-       " (3552, 0.004808716),\n",
-       " (10244, 0.0043968004),\n",
-       " (3576, 0.0039317133),\n",
-       " (229, 0.0038239034),\n",
-       " (11488, 0.003514054),\n",
-       " (9725, 0.0032417963),\n",
-       " (10359, 0.0025387409),\n",
-       " (261, 0.002467031)]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "matrix1_750topic.get_topic_terms(50)"
+    "document_topic_distribution(matrix_1,model_name=model_name,topics = \"150\")\n",
+    "document_topic_distribution(matrix_1,model_name=model_name,topics = \"500\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "matrix1_750topic.get_term_topics(3552)"
+    "## Convergence Test"
    ]
   },
   {
@@ -264,7 +150,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "import matplotlib.pyplot as plt\n",
+    "def convergence_likelyhood(model_name,num_topics):\n",
+    "    p = re.compile(\"(-*\\d+\\.\\d+) per-word .* (\\d+\\.\\d+) perplexity\")\n",
+    "    matches = [p.findall(l) for l in open('../LDAModel/{}_{}topics.log.txt'.format(model_name,num_topics))]\n",
+    "    matches = [m for m in matches if len(m) > 0]\n",
+    "    tuples = [t[0] for t in matches]\n",
+    "    perplexity = [float(t[1]) for t in tuples]\n",
+    "    liklihood = [float(t[0]) for t in tuples]\n",
+    "    iter = list(range(0,len(tuples)*10,10))\n",
+    "    plt.plot(iter,liklihood,c=\"black\")\n",
+    "    plt.ylabel(\"log liklihood\")\n",
+    "    plt.xlabel(\"iteration\")\n",
+    "    plt.title(\"Topic Model Convergence\")\n",
+    "    plt.grid()\n",
+    "    plt.savefig(\"{}_{}topics.pdf\".format(model_name,num_topics))\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convergence_likelyhood(\"matrix_1\",250)"
+   ]
   }
  ],
  "metadata": {
@@ -283,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
