--- a/Notebooks/topic_modeling_gensimLDA_compute.ipynb
+++ b/Notebooks/topic_modeling_gensimLDA_compute.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -40,7 +40,9 @@
     "import warnings\n",
     "warnings.filterwarnings(action='ignore', category=UserWarning, module='gensim')\n",
     "import gensim\n",
-    "from gensim.test.utils import datapath"
+    "from gensim.test.utils import datapath\n",
+    "\n",
+    "from compute_topic import *"
    ]
   },
   {
@@ -52,272 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "root_folder = Path('../Data/Pickle/')\n",
-    "file_name = 'TRACE2014_jinming'\n",
-    "file_path = root_folder / file_name\n",
-    "\n",
-    "data = pd.read_pickle(file_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Group data by ['document','BOND_SYM_ID_transformed'] so that represent a document and token inside it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_gb = data.groupby(by=['document','BOND_SYM_ID'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We have 98304 documents and 12078 tokens\n"
-     ]
-    }
-   ],
-   "source": [
-    "matrix_1 = data_gb['BOND_SYM_ID'].size().unstack(fill_value=0)\n",
-    "matrix_1 = matrix_1.sort_index(axis=1)\n",
-    "\n",
-    "matrix_1_shape = matrix_1.shape\n",
-    "print('We have {} documents and {} tokens'.format(matrix_1_shape[0],matrix_1_shape[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix1_corpus = gensim.matutils.Dense2Corpus(matrix_1.values,documents_columns=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_corpus(corpus,file_name):\n",
-    "    current_path = os.getcwd()\n",
-    "    current_path = Path(current_path)\n",
-    "    corpus_save_path = current_path.parent / \"./Data/Corpus/\"\n",
-    "    try:\n",
-    "        os.mkdir(corpus_save_path)\n",
-    "    except OSError:  \n",
-    "        print (\"Creation of the directory %s failed\" % corpus_save_path)\n",
-    "    else:  \n",
-    "        print (\"Successfully created the directory %s \" % corpus_save_path)\n",
-    "    file_name = corpus_save_path / \"{}.mm\".format(file_name)\n",
-    "    gensim.corpora.MmCorpus.serialize(str(file_name), corpus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creation of the directory C:\\Users\\raymo\\UMD\\Research\\FINRA_TRACE\\Data\\Corpus failed\n"
-     ]
-    }
-   ],
-   "source": [
-    "save_corpus(matrix1_corpus,\"matrix_1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_corpus(file_name):\n",
-    "    print(\"loading corpus...\")\n",
-    "    current_path = os.getcwd()\n",
-    "    current_path = Path(current_path)\n",
-    "    corpus_load_path = current_path.parent / \"./Data/Corpus/\"\n",
-    "    file_name = corpus_load_path / \"{}.mm\".format(file_name)\n",
-    "    file_name = str(file_name)\n",
-    "    corpus = gensim.corpora.MmCorpus(file_name)\n",
-    "    print(\"corpus successfully loaded!!\")\n",
-    "    print(corpus)\n",
-    "    return corpus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus = load_corpus(\"matrix_1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MmCorpus(98304 documents, 12078 features, 4072730 non-zero entries)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(corpus)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Matrix 1 => Count of  BOND_SYM_ID in a document"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "%%timeit \n",
-    "# use unstack create sparse matrix\n",
-    "matrix_1 = data_gb['BOND_SYM_ID'].size().unstack(fill_value=0)\n",
-    "# Make sure column labels are sorted\n",
-    "matrix_1 = matrix_1.sort_index(axis=1)\n",
-    "\n",
-    "matrix_1_shape = matrix_1.shape\n",
-    "print('We have {} documents and {} tokens'.format(matrix_1_shape[0],matrix_1_shape[1]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Use SKlearn Label Encoder to transform tokens into integer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\cchen07\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
-      "  if diff:\n"
-     ]
-    }
-   ],
-   "source": [
-    "le = preprocessing.LabelEncoder()\n",
-    "le.fit(matrix_1.columns)\n",
-    "transform = le.transform(matrix_1.columns)\n",
-    "inverse_transform = le.inverse_transform(transform)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create id2word to map label encoding to its words then create corpus with gensim Dense2Corpus which takes numpy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\cchen07\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\gensim\\models\\ldamodel.py:775: RuntimeWarning: divide by zero encountered in log\n",
-      "  diff = np.log(self.expElogbeta)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LdaMulticore Done!!\n",
-      "Saving Model as matrix1_1500topic\n",
-      "Successfully created the directory C:\\Users\\cchen07\\Desktop\\FINRA_TRACE-master\\Data\\LDAModel\\matrix1_1500topic \n",
-      "Model successfully save atC:\\Users\\cchen07\\Desktop\\FINRA_TRACE-master\\Data\\LDAModel\\matrix1_1500topic\\matrix1_1500topic\n"
-     ]
-    }
-   ],
-   "source": [
-    "# create id transformation and inverse_transformation dictionary as id2word for gensim \n",
-    "id2word = dict(zip(transform, inverse_transform))\n",
-    "# load matrix as numpy arrays to gensim corpus\n",
-    "matrix1_corpus = gensim.matutils.Dense2Corpus(matrix_1.values,documents_columns=False)\n",
-    "# Run LdaMulticore in Gensim\n",
-    "num_topics = 1500\n",
-    "chunksize = 10000\n",
-    "passes = 20\n",
-    "iterations = 50\n",
-    "lda = gensim.models.ldamulticore.LdaMulticore(corpus= matrix1_corpus,id2word=id2word,workers=3, num_topics=num_topics, chunksize=chunksize, passes=passes,iterations=iterations)\n",
-    "\n",
-    "print(\"LdaMulticore Done!!\")\n",
-    "\n",
-    "# The model name we want to save\n",
-    "model_name = \"matrix1_{}topic\".format(num_topics)\n",
-    "print(\"Saving Model as \"+model_name)\n",
-    "# Get current dir\n",
-    "current_path = os.getcwd()\n",
-    "current_path = Path(current_path)\n",
-    "# Add model_name to \n",
-    "save_path = current_path.parent / (\"./Data/LDAModel/{}/\".format(model_name))\n",
-    "# Create directory if not existed\n",
-    "try:\n",
-    "    os.mkdir(save_path)\n",
-    "except OSError:  \n",
-    "    print (\"Creation of the directory %s failed\" % save_path)\n",
-    "else:  \n",
-    "    print (\"Successfully created the directory %s \" % save_path)\n",
-    "# Concatonate save_path with model_name and load it as Gensim datapath\n",
-    "save_path = save_path / model_name\n",
-    "save_path = datapath(str(save_path))\n",
-    "# save the model\n",
-    "lda.save(save_path)\n",
-    "print(\"Model successfully save at\" + save_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "matrix_1 = compute_matrix1()\n",
+    "matrix_1_corpus = compute_corpus(matrix_1)\n",
+    "save_corpus(matrix_1_corpus,'matrix_1')\n",
+    "compute_id2word(matrix_1,'matrix_1')"
+   ]
   }
  ],
  "metadata": {
@@ -336,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
