--- a/Notebooks/topic_modeling_data_preparation.ipynb
+++ b/Notebooks/topic_modeling_data_preparation.ipynb
@@ -15,48 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Folder \"C:\\Users\\cchen07\\AppData\\Local\\Temp\" will be used to save temporary dictionary and corpus.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\cchen07\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
-      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n",
-      "2018-12-01 16:38:49,497 : INFO : 'pattern' package not found; tag filters are not available for English\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "%matplotlib inline\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import set_matplotlib_formats\n",
-    "set_matplotlib_formats('retina')\n",
-    "\n",
     "from pathlib import Path\n",
     "\n",
     "from sklearn import preprocessing\n",
     "\n",
-    "import logging\n",
-    "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)\n",
-    "import tempfile\n",
-    "TEMP_FOLDER = tempfile.gettempdir()\n",
-    "print('Folder \"{}\" will be used to save temporary dictionary and corpus.'.format(TEMP_FOLDER))\n",
+    "#import logging\n",
+    "#logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)\n",
+    "#import tempfile\n",
+    "#TEMP_FOLDER = tempfile.gettempdir()\n",
+    "#print('Folder \"{}\" will be used to save temporary dictionary and corpus.'.format(TEMP_FOLDER))\n",
     "\n",
-    "import gensim"
+    "import gensim\n",
+    "\n",
+    "from manage_path import *"
    ]
   },
   {
@@ -122,6 +101,125 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_data(file_name):\n",
+    "    # Prepare data file path\n",
+    "    dataset_directory = get_dataset_directory()\n",
+    "    file_path = dataset_directory / file_name\n",
+    "    \n",
+    "    # Only get the field we want\n",
+    "    field_of_interest_datetime = ['BOND_SYM_ID','CUSIP_ID','SCRTY_TYPE_CD','ENTRD_VOL_QT','RPTD_PR','RPT_SIDE_CD' \\\n",
+    "                                  ,'TRD_EXCTN_DT_D','EXCTN_TM_D','TRD_RPT_DT','TRD_RPT_TM', 'Report_Dealer_Index'\\\n",
+    "                                  ,'Contra_Party_Index','TRC_ST']\n",
+    "\n",
+    "    data_dtype={'BOND_SYM_ID': str, 'CUSIP_ID': str,'SCRTY_TYPE_CD':str, 'ENTRD_VOL_QT': np.float64, 'RPTD_PR': np.float32 \\\n",
+    "           ,'RPT_SIDE_CD':str, 'Report_Dealer_Index': str,'Contra_Party_Index': str, 'TRC_ST':str}\n",
+    "\n",
+    "    parse_dates = {'TRD_RPT_DTTM':['TRD_RPT_DT','TRD_RPT_TM'],'TRD_EXCTN_DTTM':['TRD_EXCTN_DT_D','EXCTN_TM_D']}\n",
+    "    \n",
+    "    data = pd.read_csv(file_path, usecols=field_of_interest_datetime, dtype=data_dtype, parse_dates=parse_dates\\\n",
+    "                       , infer_datetime_format=True, converters={'TRD_RPT_TM':lambda x : pd.to_datetime(x,format='%H%M%S')})\n",
+    "    \n",
+    "    # Data Cleaning => keep only Trade Status that is T\n",
+    "    data = data[data['TRC_ST'] == 'T']\n",
+    "    \n",
+    "    # Add new column document_date which is the date of TRD_EXCTN_DTTM\n",
+    "    data['document_date'] = data['TRD_EXCTN_DTTM'].dt.date.apply(str)\n",
+    "    # Add new column document_buy which is the string representation of report dealer buy on the specific day\n",
+    "    data['document_buy'] = data.apply(lambda x: str(x['Report_Dealer_Index'])+ ',' +str(x['document_date'] + ',B') ,axis=1)\n",
+    "    # Add new column document_sell which is the string representation of report dealer sell on the specific day\n",
+    "    data['document_sell'] = data.apply(lambda x: str(x['Contra_Party_Index'])+ ',' +str(x['document_date'] + ',S') ,axis=1)\n",
+    "    \n",
+    "    # Get bond_issues\n",
+    "    bond_issues_path = dataset_directory / 'Mergent_FISD_Bonds_Issues.csv'\n",
+    "    bond_issues_fields = ['ISSUER_ID','COMPLETE_CUSIP']\n",
+    "    bond_issues_dtype = {'ISSUER_ID':str , 'COMPLETE_CUSIP':str}\n",
+    "    bond_issues = pd.read_csv(bond_issues_path, usecols=bond_issues_fields , dtype=bond_issues_dtype)\n",
+    "    \n",
+    "    # Get bond_issuers\n",
+    "    bond_issuer_path = dataset_directory / 'Mergent_FISD_Bonds_Issuers.csv'\n",
+    "    bond_issuer_fields = ['ISSUER_ID', 'AGENT_ID', 'CUSIP_NAME', 'INDUSTRY_GROUP','INDUSTRY_CODE', 'PARENT_ID', 'NAICS_CODE','SIC_CODE']\n",
+    "    bond_issuer_dtype = {'ISSUER_ID':str, 'AGENT_ID':str, 'CUSIP_NAME':str, 'INDUSTRY_GROUP':str \\\n",
+    "                         ,'INDUSTRY_CODE': str, 'PARENT_ID': str, 'NAICS_CODE':str, 'SIC_CODE':str}\n",
+    "    bond_issuer = pd.read_csv(bond_issuer_path, usecols=bond_issuer_fields, encoding='cp1252', dtype=bond_issuer_dtype)\n",
+    "    \n",
+    "    \n",
+    "    #bond_ratings_path = dataset_directory / 'Mergent_FISD_Bonds_Ratings.csv'\n",
+    "    #bond_ratings = pd.read_csv(bond_ratings_path)\n",
+    "    \n",
+    "    \n",
+    "    # Merge data with bond issues using complete cusip\n",
+    "    data = data.merge(bond_issues, left_on='CUSIP_ID', right_on='COMPLETE_CUSIP', how='left')\n",
+    "    # Then, merge data with bond issuers using ISSUER_ID\n",
+    "    data = data.merge(bond_issuer, left_on='ISSUER_ID', right_on='ISSUER_ID', how='left')\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = read_data('TRACE2014_jinming_5000.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(file_name=\"TRACE2014_jinming\"):\n",
+    "    print(\"loading data {}...\".format(file_name))\n",
+    "    pickle_directory = get_Pickle_directory()\n",
+    "    \n",
+    "    pickle_file_path = pickle_directory / file_name\n",
+    "    \n",
+    "    print(\"Getting data from{}...\".format(pickle_file_path))\n",
+    "    data = pd.read_pickle(pickle_file_path)\n",
+    "    print(\"Data getting success!\")\n",
+    "    return data\n",
+    "def data_groupby():\n",
+    "    data = load_data(file_name='TRACE2014_jinming_5000.pkl')\n",
+    "    data_gb_sell = data.groupby(by=['document_sell','BOND_SYM_ID'])\n",
+    "    data_gb_buy = data.groupby(by=['document_buy','BOND_SYM_ID'])\n",
+    "    return (data_gb_sell,data_gb_buy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading data TRACE2014_jinming.pkl...\n",
+      "Getting data fromC:\\Users\\raymo\\UMD\\Research\\FINRA_TRACE\\Data\\Pickle\\TRACE2014_jinming.pkl...\n",
+      "Data getting success!\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = load_data(file_name='TRACE2014_jinming.pkl')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,21 +323,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-d4f96f07eb2f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata_gb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mby\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'document'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'BOND_SYM_ID'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_gb = data.groupby(by=['document','BOND_SYM_ID'])"
    ]
@@ -598,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
